# cmakeforneophytes

./: 404.html  Gemfile  _config.yml  feed.xml  home.md  index.html  index.md
2019/08/17/: welcome-to-cmake.html
_posts/: 2019-08-17-welcome-to-cmake.md  2019-08-20-00-system-information.md  2019-08-20-01-basic-example-hello-world.md  2019-08-20-02-multi-project-solution.md  2019-08-20-03-include-external-headers.md  2019-08-20-04-testing-using-ctest.md  2019-08-20-05-build-and-link-to-static-library.md  2019-08-20-06-build-and-load-shared-dlls.md  2019-08-20-07-run-defines-specific-code.md  2019-08-20-08-using-nuget.md  2019-08-20-demo-examples.md
_site/: feed.xml
_site/cmake_for_cpp/01_basic_example_hello_world/: hello_world.cpp
_site/cmake_for_cpp/02_multi_project_solution/: build_and_execute.py
_site/cmake_for_cpp/02_multi_project_solution/second_project/: CMakeLists.txt
_site/cmake_for_cpp/03_include_external_headers/src/: Application.cpp  MySingleton.cpp
_site/cmake_for_cpp/04_testing_using_ctest/: CMakeLists.txt
_site/cmake_for_cpp/04_testing_using_ctest/alu_tests/division_tests/: test_division_operations.cpp
_site/cmake_for_cpp/05_bulid_and_link_to_static_library/song_characteristics/include/: SongAttributes.h
_site/cmake_for_cpp/06_build_and_load_shared_dlls/tests/: CMakeLists.txt  TestDll.cpp
_site/cmake_for_cpp/08_using_NuGet/: build_and_execute.py  main.cpp
_site/cmake_for_cpp/common_utilities/headers_only/singleton/: Singleton.h
_site/demo-example-template/2019/08/20/: 01-basic-example-hello-world.html  06-build-and-load-shared-dlls.html
cmake_for_cpp/02_multi_project_solution/: CMakeLists.txt
cmake_for_cpp/02_multi_project_solution/first_project/: CMakeLists.txt  main.cpp
cmake_for_cpp/02_multi_project_solution/second_project/: main.cpp
cmake_for_cpp/03_include_external_headers/: CMakeLists.txt
cmake_for_cpp/03_include_external_headers/include/: MySingleton.h
cmake_for_cpp/04_testing_using_ctest/: build_and_execute.py
cmake_for_cpp/04_testing_using_ctest/alu/include/: alu.h
cmake_for_cpp/04_testing_using_ctest/alu_tests/add_tests/: CMakeLists.txt  test_add_operations.cpp
cmake_for_cpp/04_testing_using_ctest/alu_tests/division_tests/: CMakeLists.txt
cmake_for_cpp/04_testing_using_ctest/alu_tests/multiply_tests/: CMakeLists.txt
cmake_for_cpp/04_testing_using_ctest/alu_tests/substract_tests/: CMakeLists.txt
cmake_for_cpp/05_bulid_and_link_to_static_library/: build_and_execute.py
cmake_for_cpp/05_bulid_and_link_to_static_library/album/: CMakeLists.txt  album.cpp
cmake_for_cpp/05_bulid_and_link_to_static_library/album/test_framework/: PlaylistFactory.cpp  PlaylistFactory.h
cmake_for_cpp/05_bulid_and_link_to_static_library/song_characteristics/: CMakeLists.txt
cmake_for_cpp/05_bulid_and_link_to_static_library/song_characteristics/include/: SongCharacteristics.h
cmake_for_cpp/05_bulid_and_link_to_static_library/song_characteristics/src/: SongCharacteristics.cpp
cmake_for_cpp/05_bulid_and_link_to_static_library/songs/include/: SongGenre.h
cmake_for_cpp/05_bulid_and_link_to_static_library/songs/include/genres/: Classical.h  HeavyMetal.h  Jazz.h  Pop.h  Rock.h
cmake_for_cpp/05_bulid_and_link_to_static_library/songs/include/playlists/: ClassicalPlaylist.h  HeavyMetalPlaylist.h  JazzPlaylist.h  PopPlaylist.h  RockPlaylist.h  SongDetails.h
cmake_for_cpp/06_build_and_load_shared_dlls/: build_and_execute.py
cmake_for_cpp/06_build_and_load_shared_dlls/sources/: CMakeLists.txt  HelperAlgorithms.cpp  HelperAlgorithms.h
cmake_for_cpp/07_run_defines_specific_code/: main.cpp
cmake_for_cpp/08_using_NuGet/: packages.config
cmake_for_cpp/09_google_benchmark/: CMakeLists.txt  build_and_execute.py  main.cpp  packages.config
cmake_for_cpp/cmake_modules/: FindBenchmark.cmake  FindPvsSoftToolsSystemC.cmake  FindShlwapi.cmake
demo-example-template/2019/08/20/: 00-system-information.html  01-basic-example-hello-world.html  02-multi-project-solution.html  03-include-external-headers.html  04-testing-using-ctest.html  05-build-and-link-to-static-library.html  06-build-and-load-shared-dlls.html  07-run-defines-specific-code.html  08-using-nuget.html  demo-examples.html
docs/: 404.html  README.md  feed.xml  index.html
docs/2019/08/17/: welcome-to-cmake.html
docs/cmake_for_cpp/00_system_information/: CMakeLists.txt
docs/cmake_for_cpp/01_basic_example_hello_world/: CMakeLists.txt  build_and_execute.py
docs/cmake_for_cpp/03_include_external_headers/: build_and_execute.py
docs/cmake_for_cpp/04_testing_using_ctest/alu/: CMakeLists.txt
docs/cmake_for_cpp/04_testing_using_ctest/alu_tests/: CMakeLists.txt
docs/cmake_for_cpp/05_bulid_and_link_to_static_library/: CMakeLists.txt
docs/cmake_for_cpp/05_bulid_and_link_to_static_library/songs/: CMakeLists.txt
docs/cmake_for_cpp/05_bulid_and_link_to_static_library/songs/include/playlists/: HipHopPlaylist.h
docs/cmake_for_cpp/05_bulid_and_link_to_static_library/songs/src/genres/: Classical.cpp
docs/cmake_for_cpp/05_bulid_and_link_to_static_library/songs/src/playlists/: HipHopPlaylist.cpp  JazzPlaylist.cpp
docs/cmake_for_cpp/06_build_and_load_shared_dlls/: CMakeLists.txt
docs/cmake_for_cpp/07_run_defines_specific_code/: CMakeLists.txt  build_and_execute.py
docs/cmake_for_cpp/08_using_NuGet/: CMakeLists.txt
docs/original_docs/templates/: 04_testing_using_ctest.md
docs/templates/: 00_system_information.md  01_basic_example_hello_world.md  03_include_external_headers.md  05_build_and_link_to_static_library.md  Demo-Examples.md
home/: home.html  home.md  index.html
original_docs/: Home.md
original_docs/templates/: 02_multi_project_solution.md  06_build_and_load_shared_dlls.md  07_run_defines_specific_code.md  08_using_NuGet.md
slide-deck/: learn-cmake.pptx
(+15 files in other folders)
